--- a/Caddyfile
+++ b/Caddyfile
@@ -1,14 +1,14 @@
 # Caddyfile for py-excalidraw
 #
-# chart.phpman.top          → reverse proxy to backend root
-# chart-admin.phpman.top    → rewrite / to /admin, then reverse proxy to backend
+# excalidraw.example.com         → reverse proxy to backend root
+# excalidraw-admin.example.com     → rewrite / to /admin, then reverse proxy to backend
 #
 # If Caddy runs on the host and your backend is exposed on localhost:8888
 # (e.g., via `docker compose` mapping 8888:8888), keep 127.0.0.1:8888.
 # If Caddy runs in Docker on the same network as the backend container,
 # change the upstream to `excalidraw:8888`.
 
-chart.phpman.top {
+excalidraw.example.com {
   encode zstd gzip
   reverse_proxy 127.0.0.1:8888 {
     # Preserve original host and scheme for the backend
@@ -17,7 +17,7 @@ chart.phpman.top {
   }
 }
 
-chart-admin.phpman.top {
+excalidraw-admin.example.com {
   encode zstd gzip
 
   # Only rewrite the root path to /admin so direct visits land on admin UI
