删除不必须要的环境变量

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -121,7 +121,7 @@ jobs:
 
             cd "$REMOTE_DIR"
             # Export runtime env vars for compose
-            export APP_PUBLIC_ORIGIN='${{ secrets.PUBLIC_ORIGIN }}'
+            export PUBLIC_ORIGIN='${{ secrets.PUBLIC_ORIGIN }}'
             # Quick sanity check for compose file presence
             ls -la "$REMOTE_DIR"
             if [ ! -f "$REMOTE_DIR/docker-compose.yml" ]; then
